Return new model from QueryOrLeafQuery.asParentQuery